<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/pushBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="pushBTN"
                android:text="@string/push"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/popBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="popBTN"
                android:text="@string/pop"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/memclearBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="memclearBTN"
                android:text="@string/memclear"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/peakBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="peakBTN"
                android:text="@string/peak"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="#ff0000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/backspaceBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="backspaceBTN"
                android:text="@string/backspace"
                android:textColor="#ff0000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/moduloBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="moduloBTN"
                android:text="@string/modulo"
                android:textColor="#808080"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/divideBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="#808080"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textSize="18sp" />

            <Button
                android:id="@+id/eightBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textSize="18sp" />

            <Button
                android:id="@+id/nineBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textSize="18sp" />

            <Button
                android:id="@+id/multiplyBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textColor="#808080"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textSize="18sp" />

            <Button
                android:id="@+id/fiveBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sixBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textSize="18sp" />

            <Button
                android:id="@+id/addBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="#808080"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textSize="18sp" />

            <Button
                android:id="@+id/twoBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textSize="18sp" />

            <Button
                android:id="@+id/threeBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textSize="18sp" />

            <Button
                android:id="@+id/subtractBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="#808080"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/parenthesisBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="parenthesisBTN"
                android:text="@string/parenthesis"
                android:textSize="18sp" />

            <Button
                android:id="@+id/zeroBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textSize="18sp" />

            <Button
                android:id="@+id/pointBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textSize="18sp" />

            <Button
                android:id="@+id/equalsBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:onClick="equalsBTN"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>